# stock-scraper

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml
app/: Dockerfile  package-lock.json  package.json
app/src/lib/instrinsic-value/: calculation.ts  multipliers.ts
app/src/routes/: +layout.svelte  +page.svelte  Header.svelte
app/src/routes/watchlist/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  TableSortButton.svelte  columns.ts  data-table.svelte  types.d.ts
app/src/routes/watchlist/components/: AddStockDialog.svelte  RemoveStockWarning.svelte  StockInfo.svelte
app/src/routes/watchlist/components/add-stock-table/: AddStockTable.svelte  TableSortButton.svelte  columns.ts  data-table-checkbox.svelte
app/src/routes/watchlist/components/watchlist-table/: DataTable.svelte  columns.ts  types.d.ts
app/src/routes/watchlist/stocks/[exchange]/[stock]/: +page.server.ts  +page.svelte
config/: scraper.yaml
scraper/: .gitignore  Dockerfile  README.md  pyproject.toml
scraper/config/: companies-list.csv  scraper.yaml
scraper/scripts/: clean-db.sh  start-dev.sh  start.sh
scraper/src/: config.py  db_init.py  dependencies.py  main.py  models.py  scraper.py  utils.py
scraper/src/routers/: stocks.py  watchlist.py
src/: main.py  scraper.py
